# skydrop

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/skydrop/: annotations.cc  annotations.h  application.cc  application.h  event.cc  event.h  job_system.cc  job_system.h  main.cc  skydrop.h
src/skydrop/app/: skydrop_app.cpp  skydrop_app.h
src/skydrop/audio/: audio_engine.cpp  audio_engine.h  audio_player.cc  audio_player.h  music_queue.cc  music_queue.h
src/skydrop/core/: audio_graph.h  audio_node.h  sample_buffer.h  types.h
src/skydrop/dsp/: delay.h  envelope.h  fft.h  filter.h  mixer.h  oscillator.h  reverb.h
src/skydrop/image/: image_analyzer.cpp  image_analyzer.h  image_loader.cpp  image_loader.h
src/skydrop/synth/: color_harmony.h  edge_melody.h  image_composer.cpp  image_composer.h  region_pad.h  spectral_mapper.h  texture_rhythm.h
src/skydrop/ui/: image_panel.cpp  image_panel.h  menu_bar.cc  menu_bar.h  music_events.h  player_panel.cc  player_panel.h  queue_panel.cc  queue_panel.h  sound_panel.cc  sound_panel.h  spectrum_view.cpp  spectrum_view.h  stats_panel.cc  stats_panel.h  theme.h  transport.cpp  transport.h  ui_events.h  waveform_view.cpp  waveform_view.h
